--- a/Client/src/index.css
+++ b/Client/src/index.css
@@ -5,12 +5,12 @@
 .btn {
   background: linear-gradient(
     92.23deg,
-    #ff56f6 21.43%,
-    #b936ee 50.63%,
-    #3bace2 100%,
-    #406aff 117.04%
+    #e2ccbe 21.43%,
+    #f0c8b1 50.63%,
+    #e49f6a 100%,
+    #f07f07 117.04%
   );
-  box-shadow: 0px 4.42184px 107.23px rgba(255, 86, 246, 0.51);
+  box-shadow: 0px 4.42184px 107.23px rgba(181, 130, 0, 0.51);
   border-radius: 10px;
   width: 100px;
   height: 30px;
@@ -20,10 +20,10 @@
 .btn:hover {
   background: linear-gradient(
     92.23deg,
-    #406aff 21.43%,
-    #3bace2 50.63%,
-    #b936ee 100%,
-    #ff56f6 117.04%
+    #ef8300 117.04%,
+    #fa802a 100%,
+    #f3926f 50.63%,
+    #fba868 21.43%,
   );
 }
 
