--- a/Client/src/index.css
+++ b/Client/src/index.css
@@ -42,7 +42,8 @@
 }
 
 body{
-    background-color: slategrey;
+    background-image: url("../src/assets/fondo.png");
+    background-size: cover
 }
 
 @layer base {
